<resources>

    <string name="app_name">piggy_bank1</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_piggy_bank">piggy_bank</string>
    <string name="title_activity_accountspage">accountspage</string>
    <string name="existing_account">EXISTING ACCOUNTS</string>
    <string name="title_activity_mainpage">mainpage</string>
    <string name="Account">Accounts</string>
    <string name="add_Account">Add New Account</string>
    <string name="Account_Name">Account Name:</string>
    <string name="AccountActivities">Veiw Account Activities</string>
    <string name="Balance">Balance:</string>
    <string name="inc_exp">New Income/Expense</string>
    <string name="title_activity_incomeexpencepage">incomeexpencepage</string>
    <string name="title_activity_newaccountpage">newaccountpage</string>
    <string name="newaccount">New Account Creation</string>
    <string name="ok">Ok</string>
    <string name="title_activity_transactions">transactions</string>
    <string name="DATE">Date:</string>
    <string name="type">Type:</string>
    <string name="inc">Income</string>
    <string name="exp">Expense</string>
    <string name="category">Category:</string>
    <string name="amount">Amount:</string>
    <string name="add_info">Additional Info:</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete Account</string>
    <string name="about">About us</string>
    <string name="user">Username</string>
    <string name="user">Username</string>
    <string name="pwd">Password</string>
    <string name="back">Go back</string>
	<string name="valid">Validate</string>
    <string-array name="categories">
        <item>Shopping</item>
        <item>Grocery</item>
        <item>Household</item>
        <item>Salary</item>
        <item>Gift</item>
        <item>Daily Chores</item>
    </string-array>

    <string name="title_activity_transactionpage">transactionpage</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="title_activity_newaccount__page">Newaccount_Page</string>
    <string name="title_activity_activitiespage">Activitiespage</string>
    <string name="title_activity_view__transaction">View_Transaction</string>

    <string-array name="Day">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="Month">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string-array name="Year">
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
    </string-array>

    <string name="title_activity_login">Login</string>

</resources>